@@ -6,6 +6,7 @@ BUG: Ticket#500 - URL encode in callback (Wei)
 BUG: Ticket#517 - Quickstart I18N sample: conflicting module ID (Wei)
 BUG: Ticket#521 - comment tag on TActiveButton stop callback (Wei)
 BUG: Ticket#526 - TDatePicker Mode="Button" with ActivePanel Enabled="false" (Wei)
+BUG: Ticket#535 - TRadioButton->GroupName bug on callback (Wei)
 BUG: Ticket#538 - TActiveListBox doesn't support optgroup (Wei)
 BUG: Ticket#549 - set/get Timestamp on TDatePicker shound handle "null" values (Qiang)
 BUG: Ticket#550 - explicitly include TCallbackClientSide in TCallbackOptions (Qiang)
